--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
